Adds script to convert rosbags to csv data

--- a/human_arm_motion_server/CMakeLists.txt
+++ b/human_arm_motion_server/CMakeLists.txt
@@ -35,6 +35,7 @@ catkin_install_python(
   PROGRAMS
   src/motion_server.py
   src/motion_director.py
+  src/convert_to_csv.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
