--- a/human_arm_moveit_config/config/kinematics.yaml
+++ b/human_arm_moveit_config/config/kinematics.yaml
@@ -1,25 +1,25 @@
 thumb:
-  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.005
-  position_only_ik: True
+  kinematics_solver_timeout: 0.01
+  position_only_ik: true
 index:
-  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.005
-  position_only_ik: True
+  kinematics_solver_timeout: 0.01
+  position_only_ik: true
 middle:
-  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.005
-  position_only_ik: True
+  kinematics_solver_timeout: 0.01
+  position_only_ik: true
 ring:
-  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.005
-  position_only_ik: True
+  kinematics_solver_timeout: 0.01
+  position_only_ik: true
 pinky:
-  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.005
-  position_only_ik: True
+  kinematics_solver_timeout: 0.01
+  position_only_ik: true
