--- a/human_arm_moveit_config/config/kinematics.yaml
+++ b/human_arm_moveit_config/config/kinematics.yaml
@@ -1,25 +1,35 @@
 thumb:
-  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.01
+  kinematics_solver_timeout: 0.1
+  kinematics_solver_attempts: 10
   position_only_ik: true
+  epsilon: 0.001
 index:
-  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.01
+  kinematics_solver_timeout: 0.1
+  kinematics_solver_attempts: 10
   position_only_ik: true
+  epsilon: 0.001
 middle:
-  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.01
+  kinematics_solver_timeout: 0.1
+  kinematics_solver_attempts: 10
   position_only_ik: true
+  epsilon: 0.001
 ring:
-  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.01
+  kinematics_solver_timeout: 0.1
+  kinematics_solver_attempts: 10
   position_only_ik: true
+  epsilon: 0.001
 pinky:
-  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
-  kinematics_solver_timeout: 0.01
+  kinematics_solver_timeout: 0.1
+  kinematics_solver_attempts: 10
   position_only_ik: true
+  epsilon: 0.001
