Add scaling for palm

--- a/human_arm_description/model/properties.yaml
+++ b/human_arm_description/model/properties.yaml
@@ -119,6 +119,9 @@ link_lengths:
       <<: *SCALES_DEFAULT
     little:
       <<: *SCALES_DEFAULT
+    palm:
+      x: 1.
+      z: 1.
 
 synergies:
   default: &SYNERGY_DEFAULT
